--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class = "container">
             <div class = "header-content">
                 <h1>I'm a <br><span class = "typewrite" data-loop = "yes" data-speed = "100" data-delay = "2000" data-words = '["photographer", "videographer"]'></span></h1>
-                <h3>SaiRam Devisetty</h3>
+                <h3>Sairam Devisetty</h3>
 
                 <ul class = "social-links">
                    
@@ -125,6 +125,7 @@ I have been an active participant at my University Photography club for the past
                     <div class = "portfolio-grid grid">
                         <div><img src="images/malik-1.jpg"></div>
                         <div><img src = "images/_SRD1859-2.jpg"></div>
+                        <div><img src="images/ARMAAN MALIK (1).png"></div>
                         <div><img src = "images/_SRD4797.jpg"></div>
                         <div><img src = "images/_SRD4686-2.jpg"></div>
                         <div><img src = "images/_SRD4789.jpg"></div>
@@ -134,6 +135,16 @@ I have been an active participant at my University Photography club for the past
                         <div><img src="images/_SRD4419.jpg"></div>
                         <div><img src="images/malik-3.jpg"></div>
                         <div><img src="images/malik-2.jpg"></div>
+                        <div><img src="images/_SRD0702-Edit 1.jpg"></div>
+                        <div><img src="images/_SRD1627-Edit 3.jpg"></div>
+                        <div><img src="images/_RAJ0113-4.jpg"></div>
+                        <div><img src="images/_SRD2556-Edit.jpg"></div>
+                        <div><img src="images/_SRD0314-Edit.jpg"></div>
+                        <div><img src="images/_SRD1462-Edit.jpg"></div>
+                        <div><img src="images/_SRD5234.jpg"></div>
+                        <div><img src="images/_SRD0307-EditTT.jpg"></div>
+                        <div><img src="images/IMG_6574-FINAL EDIT copy.jpg"></div>
+                        
 
 
                     </div>
@@ -151,10 +162,10 @@ I have been an active participant at my University Photography club for the past
                             <h2>contact with me</h2>
                         </div>
                         <p class = "lead"><i class = "fas fa-phone-alt"></i> +91 7095091251</p>
-                        <p class = "lead"><i class = "fas fa-envelope"></i> sairam_devisetty@srmap.edu.in</p>
+                        <p class = "lead"><i class = "fas fa-envelope"></i> sairam7d@gmail.com</p>
                         <form action="https://formsubmit.co/sairam_devisetty@srmap.edu.in" method="POST">
-                            <input type = "text" class = "form-control" placeholder="Your message here ...">
-                            <input type = "email" class = "form-control" placeholder="Your email here">
+                            <input type = "text" name="message" class = "form-control" placeholder="Your message here ..." required>
+                            <input type = "email" name="email" class = "form-control" placeholder="Your email here" required>
                             <input type = "submit" class = "btn-submit btn" value = "Submit">
                         </form>
                     </div>
@@ -175,15 +186,15 @@ I have been an active participant at my University Photography club for the past
         <div class = "container">
             <div class = "footer-content">
                 <div>
-                    <h3>SaiRam Devisetty</h3>
+                    <h3>Sairam Devisetty</h3>
                     <div><img  src = "images/_SRD4920.jpg"></div>
                 </div>
 
                 <div>
                     <h3>Links</h3>
                     <ul class = "flex">
-                        <li><a href = "#footer">About Me</a></li>
-                        <li><a href = "#Work">Work</a></li>
+                        <li><a href = "#about">About Me</a></li>
+                        <li><a href = "#work">Work</a></li>
                         <li><a href = "#portfolio">Portfolio</a></li>
                         <li><a href = "#contact">Contact Me</a></li>
                         <li><a href = "https://www.instagram.com/sairam.devisetty/">Instagram</a></li>
