--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@ I have been an active participant at my University Photography club for the past
                         <div><img src="images/_SRD1462-Edit.jpg"></div>
                         <div><img src="images/_SRD5234.jpg"></div>
                         <div><img src="images/_SRD0307-EditTT.jpg"></div>
+                        <div><img src="images/_SRD5414.jpg"></div>
+                        <div><img src="images/_MG_7036-2-Edit.jpg"></div>
                         <div><img src="images/IMG_6574-FINAL EDIT copy.jpg"></div>
                         
 
