--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class = "container">
                 <div class = "about-content grid">
                     <div class = "about-left">
-                        <img class="border" src = "images/blacked.jpg" alt = "">
+                        <img class="border" src = "images/blacked.jpg" alt = "" loading="eager">
                     </div>
                     <div class = "about-right">
                         <div class = "title">
@@ -123,29 +123,29 @@ I have been an active participant at my University Photography club for the past
                     </div>
 
                     <div class = "portfolio-grid grid">
-                        <div><img src="images/malik-1.jpg"></div>
-                        <div><img src = "images/_SRD1859-2.jpg"></div>
-                        <div><img src="images/ARMAAN MALIK (1).png"></div>
-                        <div><img src = "images/_SRD4797.jpg"></div>
-                        <div><img src = "images/_SRD4686-2.jpg"></div>
-                        <div><img src = "images/_SRD4789.jpg"></div>
-                        <div><img src = "images/_SRD4744.jpg"></div>
-                        <div><img src = "images/_SRD4770.jpg"></div>
-                        <div><img src = "images/_SRD4738.jpg"></div>
-                        <div><img src="images/_SRD4419.jpg"></div>
-                        <div><img src="images/malik-3.jpg"></div>
-                        <div><img src="images/malik-2.jpg"></div>
-                        <div><img src="images/_SRD0702-Edit 1.jpg"></div>
-                        <div><img src="images/_SRD1627-Edit 3.jpg"></div>
-                        <div><img src="images/_RAJ0113-4.jpg"></div>
-                        <div><img src="images/_SRD2556-Edit.jpg"></div>
-                        <div><img src="images/_SRD0314-Edit.jpg"></div>
-                        <div><img src="images/_SRD1462-Edit.jpg"></div>
-                        <div><img src="images/_SRD5234.jpg"></div>
-                        <div><img src="images/_SRD0307-EditTT.jpg"></div>
-                        <div><img src="images/_SRD5414.jpg"></div>
-                        <div><img src="images/_MG_7036-2-Edit.jpg"></div>
-                        <div><img src="images/IMG_6574-FINAL EDIT copy.jpg"></div>
+                        <div><img src="images/malik-1.jpg" loading="lazy"></div>
+                        <div><img src = "images/_SRD1859-2.jpg" loading="lazy"></div>
+                        <div><img src="images/ARMAAN MALIK (1).png" loading="lazy"></div>
+                        <div><img src = "images/_SRD4797.jpg" loading="lazy"> </div>
+                        <div><img src = "images/_SRD4686-2.jpg" loading="lazy"></div>
+                        <div><img src = "images/_SRD4789.jpg" loading="lazy"></div>
+                        <div><img src = "images/_SRD4744.jpg" loading="lazy"></div>
+                        <div><img src = "images/_SRD4770.jpg" loading="lazy"></div>
+                        <div><img src = "images/_SRD4738.jpg" loading="lazy"></div>
+                        <div><img src="images/_SRD4419.jpg" loading="lazy"></div>
+                        <div><img src="images/malik-3.jpg" loading="lazy"></div>
+                        <div><img src="images/malik-2.jpg" loading="lazy"></div>
+                        <div><img src="images/_SRD0702-Edit 1.jpg" loading="lazy"></div>
+                        <div><img src="images/_SRD1627-Edit 3.jpg" loading="lazy"></div>
+                        <div><img src="images/_RAJ0113-4.jpg" loading="lazy"></div>
+                        <div><img src="images/_SRD2556-Edit.jpg" loading="lazy"></div>
+                        <div><img src="images/_SRD0314-Edit.jpg" loading="lazy"></div>
+                        <div><img src="images/_SRD1462-Edit.jpg" loading="lazy"></div>
+                        <div><img src="images/_SRD5234.jpg" loading="lazy"></div>
+                        <div><img src="images/_SRD0307-EditTT.jpg" loading="lazy"></div>
+                        <div><img src="images/_SRD5414.jpg" loading="lazy"></div>
+                        <div><img src="images/_MG_7036-2-Edit.jpg" loading="lazy"></div>
+                        <div><img src="images/IMG_6574-FINAL EDIT copy.jpg" loading="lazy"></div>
                         
 
 
@@ -161,7 +161,7 @@ I have been an active participant at my University Photography club for the past
                 <div class = "contact-content flex">
                     <div class = "contact-left">
                         <div class="title">
-                            <h2>contact with me</h2>
+                            <h2>contact me</h2>
                         </div>
                         <p class = "lead"><i class = "fas fa-phone-alt"></i> +91 7095091251</p>
                         <p class = "lead"><i class = "fas fa-envelope"></i> sairam7d@gmail.com</p>
@@ -173,7 +173,7 @@ I have been an active participant at my University Photography club for the past
                     </div>
 
                     <div class = "contact-right">
-                        <img class="border" src = "images/profile.jpg" alt = "contact image">
+                        <img class="border" src = "images/profile.jpg" alt = "contact image" loading="lazy">
                     </div>
                 </div>
             </div>
